tests/baselines/reference/unqualifiedCallToClassStatic1.errors.txt
tests/cases/compiler/unqualifiedCallToClassStatic1.ts(4,3): error TS2662: Cannot find name 'foo'. Did you mean to prefix the static member with the class name, 'Vector.foo'?


==== tests/cases/compiler/unqualifiedCallToClassStatic1.ts (1 errors) ====
    class Vector {
     static foo = () => {
      // 'foo' cannot be called in an unqualified manner.
      foo();
      ~~~
!!! error TS2662: Cannot find name 'foo'. Did you mean to prefix the static member with the class name, 'Vector.foo'?
     }
    }